--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -36,7 +36,7 @@
     <title>React App</title>
     <script src="https://accounts.google.com/gsi/client" async defer ></script>
   </head>
-  <body style="background-color:rgb(31, 31, 58) ">
+  <body style="background-color: #180e32 ">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
