--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -38,7 +38,7 @@
     <title>React App</title>
     <script src="https://accounts.google.com/gsi/client" async defer ></script>
   </head>
-  <body style="background-color: #415434 ">
+  <body style="background-color: #37397f ">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
